--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -26,6 +26,7 @@ services:
       - 6379:6379
 
   db:
+    platform: linux/amd64
     image: mcr.microsoft.com/mssql/server:latest
     restart: unless-stopped
     ports:
