--- a/gatherist.web/appsettings.Development.json
+++ b/gatherist.web/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "gatherist": "Server=localhost;Database=gatherist;User Id=sa;Password=P@ssw0rd;MultipleActiveResultSets=true;TrustServerCertificate=true;"
   }
 }
