--- a/gatherist.web/gatherist.web.csproj
+++ b/gatherist.web/gatherist.web.csproj
@@ -16,7 +16,24 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Dapper" Version="2.1.35" />
       <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.1" />
+      <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Update="Services\SqlStatements.resx">
+        <Generator>ResXFileCodeGenerator</Generator>
+        <LastGenOutput>SqlStatements.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Update="Services\SqlStatements.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>SqlStatements.resx</DependentUpon>
+      </Compile>
     </ItemGroup>
 
 </Project>
